<resources>
    <string name="app_name">My Github User</string>

    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="your_profile">Your Profile</string>
    <string name="followers">Followers</string>
    <string name="following">.Following</string>
    <string name="repository">.Repository</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="name">Name</string>
    <string name="search">Search Here..</string>
    <string name="hi_welcome">Hi, Welcome..!!</string>
    <string name="language_setting">Language Setting</string>
    <string name="created_by">Created By : Miftahul Ulum</string>
    <string name="please_input_id_name">Please Input ID Name</string>
    <string name="reminder">Reminder</string>
    <string name="splashscreen">splashscreen</string>
    <string name="my_favorite">My Favorite</string>
</resources>